[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/theme/fonts/bolt_hud_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/theme/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/sounds/_zaloga/hit1___614185__bruhitybruh__car-door-smash-snare-kick.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/sfx/_pa/last_beat.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/sfx/engine_start___62564__lonemonk__1951-mercury-warm-start-and-idle.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/textures/atlas_arena_objects.png" type="Texture" id=6]
[ext_resource path="res://_rezerva/_zaloga_shaderjev/originali_uporabljanega/bolt_wiggle.material" type="Material" id=7]
[ext_resource path="res://assets/sounds/sfx/engine_revup___62564__lonemonk__1951-mercury-warm-start-and-idle.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/sfx/hit_stray_v2.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/sfx/_pa/burst/burst.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/sfx/_pa/skills/skilled_frcer.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/resources/icons/icon_shocker.tres" type="Texture" id=12]
[ext_resource path="res://assets/textures/weapons/bullet.png" type="Texture" id=13]
[ext_resource path="res://assets/sounds/sfx/engine___62564__lonemonk__1951-mercury-warm-start-and-idle.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/resources/icons/icon_mina.tres" type="Texture" id=15]
[ext_resource path="res://assets/resources/icons/icon_misile.tres" type="Texture" id=16]
[ext_resource path="res://assets/resources/icons/icon_bullet.tres" type="Texture" id=17]
[ext_resource path="res://assets/sounds/sfx/_pa/burst/hit_wall_dizzy_NFF-dizzyness.wav" type="AudioStream" id=18]
[ext_resource path="res://game/bolt/BoltHud.gd" type="Script" id=19]
[ext_resource path="res://assets/textures/bolt/bolt_car.png" type="Texture" id=20]
[ext_resource path="res://game/bolt/rigid/TheBolt.gd" type="Script" id=21]
[ext_resource path="res://game/bolt/rigid/ThrustFx.tscn" type="PackedScene" id=22]
[ext_resource path="res://game/bolt/rigid/BoltController.gd" type="Script" id=23]

[sub_resource type="RectangleShape2D" id=5259]
extents = Vector2( 39.5, 16 )

[sub_resource type="RectangleShape2D" id=5254]
extents = Vector2( 6.5, 6 )

[sub_resource type="AtlasTexture" id=5255]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 8, 8 )

[sub_resource type="AudioStreamRandomPitch" id=5256]
audio_stream = ExtResource( 9 )

[sub_resource type="AudioStreamRandomPitch" id=5257]
audio_stream = ExtResource( 3 )

[sub_resource type="AudioStreamRandomPitch" id=5258]
audio_stream = ExtResource( 10 )
random_pitch = 1.05

[node name="TheBolt" type="RigidBody2D"]
mass = 30.0
gravity_scale = 0.0
linear_damp = 2.0
angular_damp = 8.0
applied_force = Vector2( 10, 0 )
script = ExtResource( 21 )

[node name="BoltController" type="Node" parent="."]
script = ExtResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 0 )
shape = SubResource( 5259 )

[node name="Polygon2D" type="Polygon2D" parent="CollisionShape2D"]
visible = false
show_behind_parent = true
position = Vector2( 69.0698, 18 )
scale = Vector2( 2.7907, 1 )
color = Color( 0.368627, 1, 0.662745, 1 )
offset = Vector2( -20, -19 )
polygon = PoolVector2Array( -15.5, 11, -15.5, -9, 6, -9, 6, 11 )

[node name="BoltSprite" type="Sprite" parent="."]
material = ExtResource( 7 )
texture = ExtResource( 20 )
offset = Vector2( 0.381001, 0.499999 )

[node name="Wheels" type="Node2D" parent="."]
show_behind_parent = true

[node name="WheelFrontL" type="Line2D" parent="Wheels"]
position = Vector2( 28, -16 )
points = PoolVector2Array( -5, 0, 5, 0 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="ThrustFx" parent="Wheels/WheelFrontL" instance=ExtResource( 22 )]
visible = false

[node name="WheelFrontR" type="Line2D" parent="Wheels"]
position = Vector2( 28, 16 )
points = PoolVector2Array( -5, 0, 5, 0 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="ThrustFx" parent="Wheels/WheelFrontR" instance=ExtResource( 22 )]
visible = false

[node name="WheelRearL" type="Line2D" parent="Wheels"]
position = Vector2( -21, -16 )
points = PoolVector2Array( -5, 0, 5, 0 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="ThrustFx" parent="Wheels/WheelRearL" instance=ExtResource( 22 )]
visible = false

[node name="WheelRearR" type="Line2D" parent="Wheels"]
position = Vector2( -21, 16 )
points = PoolVector2Array( -5, 0, 5, 0 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="ThrustFx" parent="Wheels/WheelRearR" instance=ExtResource( 22 )]
visible = false

[node name="FrontPin" type="PinJoint2D" parent="."]
position = Vector2( 26, 0 )
node_a = NodePath("..")
node_b = NodePath("Front")

[node name="Front" type="RigidBody2D" parent="FrontPin"]
gravity_scale = 0.0
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontPin/Front"]
shape = SubResource( 5254 )
disabled = true

[node name="Polygon2D" type="Polygon2D" parent="FrontPin/Front/CollisionShape2D"]
visible = false
show_behind_parent = true
position = Vector2( 14, 19 )
offset = Vector2( -20, -19 )
polygon = PoolVector2Array( -19.5, 10, -19.5, -10, 31.5, -10, 31.5, 10 )

[node name="RearPin" type="PinJoint2D" parent="."]
position = Vector2( -21, 0 )
node_a = NodePath("..")
node_b = NodePath("Rear")

[node name="Rear" type="RigidBody2D" parent="RearPin"]
gravity_scale = 0.0
can_sleep = false
linear_damp = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RearPin/Rear"]
position = Vector2( -0.5, 0 )
shape = SubResource( 5254 )
disabled = true

[node name="Polygon2D" type="Polygon2D" parent="RearPin/Rear/CollisionShape2D"]
visible = false
show_behind_parent = true
position = Vector2( 14, 19 )
offset = Vector2( -20, -19 )
polygon = PoolVector2Array( -19.5, 10, -19.5, -10, 31.5, -10, 31.5, 10 )

[node name="BoltHud" type="Node2D" parent="."]
visible = false
script = ExtResource( 19 )

[node name="BoltHudLines" type="VBoxContainer" parent="BoltHud"]
margin_left = -3.0
margin_right = 3.0
margin_bottom = 3.0
grow_horizontal = 2
rect_min_size = Vector2( 6, 0 )

[node name="EnergyBar" type="Control" parent="BoltHud/BoltHudLines"]
margin_left = 1.0
margin_right = 7.0
margin_bottom = 1.0
grow_horizontal = 2
rect_min_size = Vector2( 6, 1 )
size_flags_horizontal = 4

[node name="Undi" type="Polygon2D" parent="BoltHud/BoltHudLines/EnergyBar"]
position = Vector2( -0.5, 0 )
color = Color( 0.32549, 0.356863, 0.407843, 0.54902 )
polygon = PoolVector2Array( 0.5, 0, 0.5, 1, 6.5, 1, 6.5, 0 )

[node name="Bar" type="Polygon2D" parent="BoltHud/BoltHudLines/EnergyBar"]
position = Vector2( -0.5, 0 )
color = Color( 0.847059, 0.0235294, 0.0235294, 1 )
polygon = PoolVector2Array( 0.5, 0, 0.5, 1, 6.5, 1, 6.5, 0 )

[node name="WeaponSelector" type="Control" parent="BoltHud/BoltHudLines"]
margin_top = 5.0
margin_right = 8.0
margin_bottom = 13.0
rect_min_size = Vector2( 8, 8 )
size_flags_horizontal = 4

[node name="Weapons" type="HBoxContainer" parent="BoltHud/BoltHudLines/WeaponSelector"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -4.0
margin_right = 4.0
margin_bottom = 8.0
grow_horizontal = 2
theme = ExtResource( 2 )
custom_constants/separation = 2

[node name="IconBullet" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons"]
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 17 )

[node name="IconEdge" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconBullet"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
size_flags_horizontal = 4
texture = SubResource( 5255 )

[node name="Label" type="Label" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconBullet"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_right = 42.0
margin_bottom = 20.0
grow_horizontal = 2
rect_min_size = Vector2( 48, 0 )
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 1 )
text = "0000"
align = 1

[node name="IconMisile" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons"]
margin_left = 10.0
margin_right = 18.0
margin_bottom = 8.0
texture = ExtResource( 16 )

[node name="IconEdge" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconMisile"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
size_flags_horizontal = 4
texture = SubResource( 5255 )

[node name="Label" type="Label" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconMisile"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_right = 42.0
margin_bottom = 20.0
grow_horizontal = 2
rect_min_size = Vector2( 48, 0 )
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 1 )
text = "0000"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="IconMina" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons"]
margin_left = 20.0
margin_right = 28.0
margin_bottom = 8.0
texture = ExtResource( 15 )

[node name="IconEdge" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconMina"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
size_flags_horizontal = 4
texture = SubResource( 5255 )

[node name="Label" type="Label" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconMina"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_right = 42.0
margin_bottom = 20.0
grow_horizontal = 2
rect_min_size = Vector2( 48, 0 )
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 1 )
text = "0000"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="IconShocker" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons"]
margin_left = 30.0
margin_right = 38.0
margin_bottom = 8.0
texture = ExtResource( 12 )

[node name="IconEdge" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconShocker"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
size_flags_horizontal = 4
texture = SubResource( 5255 )

[node name="Label" type="Label" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconShocker"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_right = 42.0
margin_bottom = 20.0
grow_horizontal = 2
rect_min_size = Vector2( 48, 0 )
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 1 )
text = "0000"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="SelectorTimer" type="Timer" parent="BoltHud/BoltHudLines/WeaponSelector"]
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="EngineStart" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
bus = "GameSfx"

[node name="EngineRevup" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
bus = "GameSfx"

[node name="Engine" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 14 )
bus = "GameSfx"

[node name="HitWall" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 5256 )
volume_db = -15.0
pitch_scale = 0.7
bus = "GameSfx"

[node name="HitWall2" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 5257 )
volume_db = -15.0
pitch_scale = 0.85
bus = "GameSfx"

[node name="HitMisile" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 5258 )
volume_db = -10.0
bus = "GameSfx"

[node name="Dizzy" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 18 )
volume_db = -20.0
bus = "GameSfx"

[node name="Shocked" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
volume_db = -25.0
bus = "GameSfx"

[node name="Heartbeat" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
pitch_scale = 1.1
bus = "GameSfx"

[node name="FrontEnginePositionL" type="Position2D" parent="."]
position = Vector2( 24, -8 )
__meta__ = {
"_edit_group_": true,
"_gizmo_extents_": 2.0
}

[node name="indikator3" type="Sprite" parent="FrontEnginePositionL"]
visible = false
position = Vector2( 0, 1 )
texture = ExtResource( 13 )

[node name="FrontEnginePositionR" type="Position2D" parent="."]
position = Vector2( 24, 8 )
__meta__ = {
"_edit_group_": true,
"_gizmo_extents_": 2.0
}

[node name="indikator2" type="Sprite" parent="FrontEnginePositionR"]
visible = false
texture = ExtResource( 13 )

[node name="RearEnginePosition" type="Position2D" parent="."]
position = Vector2( -24, -8 )
__meta__ = {
"_edit_group_": true,
"_gizmo_extents_": 2.0
}

[node name="indikator" type="Sprite" parent="RearEnginePosition"]
visible = false
position = Vector2( 0, 0.5 )
texture = ExtResource( 13 )

[node name="TrailPosition" type="Position2D" parent="."]
position = Vector2( -24, 0 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="GunPosition" type="Position2D" parent="."]
position = Vector2( 40, 0 )
__meta__ = {
"_edit_group_": true,
"_gizmo_extents_": 2.0
}

[node name="indikator" type="Sprite" parent="GunPosition"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="DirectionLine" type="Line2D" parent="."]
position = Vector2( 26, 0 )
points = PoolVector2Array( 0, 0, 100, 0 )
width = 4.0

[connection signal="timeout" from="BoltHud/BoltHudLines/WeaponSelector/SelectorTimer" to="BoltHud" method="_on_SelectorTimer_timeout"]
